@@ -1,3 +1,7 @@
+2025-01-20  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .github/workflows/ci.yaml: Simplify to r-ci with included bootstrap
+
 2024-08-30  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Authors@R): Added
